fix arrow on mobile

--- a/src/scss/atoms/_index.scss
+++ b/src/scss/atoms/_index.scss
@@ -61,7 +61,7 @@
   margin-top: 24px;
 
   .touch & {
-    margin-top: -24px;
+    margin-top: -8px;
   }
 
   &:before,
